--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,10 @@
         <ul class="sources-list"></ul>
       </div>
       <div class="model-attr"></div>
-      <button class="ask-another-btn">Ask another question</button>
+      <div class="answer-actions">
+        <button class="ask-another-btn">Ask another question</button>
+        <button class="copy-link-btn" aria-label="Copy link to this question">Copy link</button>
+      </div>
     </div>
 
     <!-- Error -->
