--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,7 @@
         <h1>NZ Tax Assistant</h1>
         <p class="subtitle">Personal income tax guidance for New Zealand residents</p>
       </div>
+      <button class="new-conversation-btn" hidden>New conversation</button>
     </div>
   </header>
 
@@ -41,16 +42,7 @@
       <strong>General guidance only.</strong> This tool provides information based on IRD published guidance and is not professional tax advice. Always confirm with a tax professional or <a href="https://www.ird.govt.nz" target="_blank" rel="noopener">ird.govt.nz<span class="visually-hidden"> (opens in new tab)</span></a> for your specific situation.
     </aside>
 
-    <!-- Ask -->
-    <div class="ask-card">
-      <form id="ask-form" class="ask-form">
-        <label for="question" class="visually-hidden">Your tax question</label>
-        <textarea id="question" name="question" rows="1" placeholder="Ask a tax question..." required aria-required="true"></textarea>
-        <button type="submit" class="ask-btn">Ask</button>
-      </form>
-    </div>
-
-    <!-- Examples -->
+    <!-- Examples (landing page only) -->
     <section class="examples-section" aria-labelledby="examples-heading">
       <h2 id="examples-heading" class="examples-label">Common questions</h2>
       <div class="examples-grid" role="group" aria-labelledby="examples-heading">
@@ -63,43 +55,22 @@
       </div>
     </section>
 
-    <!-- Loading -->
-    <div class="loading-section" hidden role="status" aria-live="polite">
-      <div class="loading-dots" aria-hidden="true"><span></span><span></span><span></span></div>
-      <div class="loading-text">Searching IRD guidance...</div>
-    </div>
-
-    <!-- Answer -->
-    <div class="answer-section" hidden tabindex="-1" aria-live="polite">
-      <div class="tools-used" hidden aria-label="Tools used"></div>
-      <div class="answer-content"></div>
-      <div class="sources">
-        <h2 class="sources-label">Sources</h2>
-        <ul class="sources-list"></ul>
-      </div>
-      <div class="answer-footer">
-        <div class="model-attr"></div>
-        <div class="feedback-bar" hidden>
-          <span class="feedback-label">Was this helpful?</span>
-          <button class="feedback-btn" data-feedback="positive" aria-label="Thumbs up">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true"><path d="M8.5 1.5l-1 3.5H3a1 1 0 00-1 1v6a1 1 0 001 1h2l1.5 1.5h5a1 1 0 001-.8l1-5a1 1 0 00-1-1.2H9.5l.7-2.5a1.5 1.5 0 00-1.7-1.5z" stroke="currentColor" stroke-width="1.2" stroke-linejoin="round"/></svg>
-          </button>
-          <button class="feedback-btn" data-feedback="negative" aria-label="Thumbs down">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true"><path d="M7.5 14.5l1-3.5H13a1 1 0 001-1V4a1 1 0 00-1-1h-2L9.5 1.5h-5a1 1 0 00-1 .8l-1 5a1 1 0 001 1.2H6.5l-.7 2.5a1.5 1.5 0 001.7 1.5z" stroke="currentColor" stroke-width="1.2" stroke-linejoin="round"/></svg>
-          </button>
-          <span class="feedback-thanks" hidden>Thanks for your feedback!</span>
-        </div>
-      </div>
-      <div class="answer-actions">
-        <button class="ask-another-btn">Ask another question</button>
-        <button class="copy-link-btn" aria-label="Copy link to this question">Copy link</button>
-      </div>
-    </div>
+    <!-- Conversation container (holds previous turns + current answer) -->
+    <div class="conversation-container" hidden aria-live="polite"></div>
 
     <!-- Error -->
     <div class="error-section" hidden tabindex="-1" role="alert">
       <p></p>
       <button class="retry-btn">Try again</button>
+    </div>
+
+    <!-- Ask (always visible, moves to bottom in chat mode) -->
+    <div class="ask-card">
+      <form id="ask-form" class="ask-form">
+        <label for="question" class="visually-hidden">Your tax question</label>
+        <textarea id="question" name="question" rows="1" placeholder="Ask a tax question..." required aria-required="true"></textarea>
+        <button type="submit" class="ask-btn">Ask</button>
+      </form>
     </div>
 
   </main>
